# cmd-simulations

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  ideas.text
INPUT_DATA/ex_0/: scenario.yaml  smd_heavy_params.yaml  smd_light_params.yaml
INPUT_DATA/ex_1/: missile_params.yaml  scenario.yaml  target_params.yaml
cmake/: define_dependency.cmake  osk-config.cmake.in
examples/ex_0/: CMakeLists.txt  main.cpp  params.yaml  spring_mass_damper_heavy_params.yaml  spring_mass_damper_light_params.yaml  spring_mass_damper_params.yaml
examples/ex_1/: CMakeLists.txt  main.cpp  missile_params.yaml  params.yaml  target_params.yaml  visualise.py
models/: missile.cpp  missile.h  spring_mass_damper.cpp  spring_mass_damper.h  target.cpp  target.h
osk/: block.cpp  block.h  dds_pub.h  dds_sub.h  dds_types.h  factory.h  logger.h  montecarlo.h  noise.h  sim.cpp  sim.h  simdds.cpp  simdds.h  state.cpp  state.h  trackable.h  viz_bridge.h  yaml_eigen.h
src/: CMakeLists.txt  main.cpp  registered_models.cpp
tools/: new_model.py  visualise_ex1.py  viz_realtime.py
